--- a/yueshipin/res/layout/mediacontroller_720.xml
+++ b/yueshipin/res/layout/mediacontroller_720.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="right"
+    android:background="@drawable/player_bg"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -42,7 +42,6 @@
     </RelativeLayout>
 
     <RelativeLayout
-         android:id="@+id/relativeLayoutBottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -59,24 +58,20 @@
             android:text="00:00"
             android:textColor="@color/white" />
 
-  <SeekBar
-      android:id="@+id/mediacontroller_seekbar"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginLeft="10dp"
-      android:layout_marginRight="10dp"
-      android:layout_marginTop="12dp"
-      android:layout_toLeftOf="@+id/mediacontroller_time_total"
-      android:layout_toRightOf="@+id/mediacontroller_time_current"
-      android:focusable="true"
-      android:indeterminateOnly="false"
-      android:max="1000"
-      android:progressDrawable="@drawable/player_seekbar_img"
-      android:secondaryProgress="0"
-      android:thumb="@drawable/player_seekbar_thumb"
-      android:paddingLeft="7dp"
-		android:thumbOffset="6dp"
-     />
+        <SeekBar
+            android:id="@+id/mediacontroller_seekbar"
+            style="@style/MediaController_SeekBar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp"
+            android:layout_toLeftOf="@+id/mediacontroller_time_total"
+            android:layout_toRightOf="@+id/mediacontroller_time_current"
+            android:focusable="true"
+            android:max="1000" />
 
         <TextView
             android:id="@+id/mediacontroller_time_total"
@@ -152,104 +147,21 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/relativeLayoutBottom"
+        android:layout_below="@+id/relativeLayout1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="35dp"
+        android:layout_marginTop="82dp"
         android:text="正在载入笑傲江湖第五集，请稍后 ..."
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/white" 
-        android:visibility="gone"/>
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/relativeLayoutBottom"
+        android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:text="上次播放到 00:43:23"
-        android:textColor="@color/grey" 
-         android:visibility="gone"/>
-
-    <RelativeLayout
-        android:id="@+id/relativeLayoutBottomRight"
-        android:layout_width="202dp"
-        android:layout_height="105dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="41dp"
-        android:layout_marginRight="14dp"
-        android:background="@drawable/player_clarity_bg"
-        android:orientation="horizontal"
-         android:visibility="gone" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="9dp"
         android:layout_marginTop="9dp"
-        android:text="请选择影片清晰度:"
-        android:textColor="@color/white" />
+        android:text="上次播放到 00:43:23"
+        android:textColor="@color/grey" />
 
-<RadioGroup
-    android:id="@+id/radioGroup1"
-    android:layout_width="match_parent"
-    android:layout_height="57dp"
-    android:layout_below="@+id/textView1"
-    android:layout_marginLeft="4dp"
-    android:layout_marginTop="5dp"
-    android:background="@drawable/player_clarity_btn_bg"
-    android:orientation="horizontal" >
-
-        <RadioButton
-            android:id="@+id/radio0"
-            android:layout_width="64dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/player_b_puqing"
-            android:button="@null"
-            android:checked="true"
-            android:gravity="bottom|center_horizontal" />
-
-        <RadioButton
-            android:id="@+id/radio1"
-            android:layout_width="64dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/player_b_gaoqing"
-            android:button="@null" 
-             android:gravity="bottom|center_horizontal"/>
-
-        <RadioButton
-            android:id="@+id/radio2"
-            android:layout_width="64dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/player_b_chaoqing"
-            android:button="@null" 
-             android:gravity="bottom|center_horizontal"/>
-    </RadioGroup>
-</RelativeLayout>
-<RelativeLayout
-     android:id="@+id/relativeLayoutTopRight"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-     android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-    android:paddingRight="4dp"
-    android:background="@drawable/player_jishu_shang"
-    android:orientation="horizontal" 
-    android:visibility="gone">
-
-    <ListView
-        android:id="@+id/listView1"
-        android:layout_width="97dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:divider="@drawable/player_fen_ge_xian"
-        android:layout_marginTop="10dp" >
-
-    </ListView>
-
-</RelativeLayout>
 </RelativeLayout>
