--- a/yueshipin/res/layout/download_show.xml
+++ b/yueshipin/res/layout/download_show.xml
@@ -98,10 +98,11 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:layout_marginTop="60dp"
-            android:background="@drawable/list_bg"
+           	android:divider="@android:color/transparent"
             android:cacheColorHint="#00000000"
             >
         </ListView>
+        <!-- android:background="@drawable/list_bg" -->
     </RelativeLayout>
 
 </RelativeLayout>
