--- a/yueshipin/res/layout/player_detail_list.xml
+++ b/yueshipin/res/layout/player_detail_list.xml
@@ -4,12 +4,20 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal" >
 
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/player_list_item" />
+
         <TextView
             android:id="@+id/txt_video_caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="444444"
