--- a/yueshipin/res/layout/player_detail_list.xml
+++ b/yueshipin/res/layout/player_detail_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal" >
 
@@ -19,7 +19,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:ellipsize="end"
-            android:singleLine="true"
+           android:maxLines = "2"
             android:text="444444"
             android:textColor="@color/white"
             android:textSize="18dip" />
