--- a/yueshipin/res/layout/videoview.xml
+++ b/yueshipin/res/layout/videoview.xml
@@ -77,7 +77,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
-                android:text="热血高校2"
+                android:text="热血高校热血高校热血高校热血高校热血高校"
+                 android:ellipsize="end"
+              android:singleLine="true"
+              android:maxEms = "15"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/white" />
 
