--- a/yueshipin/res/layout/tab2page3.xml
+++ b/yueshipin/res/layout/tab2page3.xml
@@ -69,7 +69,7 @@
         </ListView>
         -->
 
-        <com.joyplus.widget.PullToRefreshListView
+        <com.joyplus.widget.MyListView
             android:id="@+id/listView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
