--- a/yueshipin/res/layout/videoview.xml
+++ b/yueshipin/res/layout/videoview.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@color/black">
 
     <io.vov.vitamio.widget.VideoView
         android:id="@+id/surface_view"
@@ -70,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="@drawable/player_top_bg" >
+            android:background="@color/black" >
 
             <TextView
                 android:id="@+id/mediacontroller_file_name"
