--- a/yueshipin/res/layout/dlna_video_play2.xml
+++ b/yueshipin/res/layout/dlna_video_play2.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:background="@drawable/player_tou_fang" >
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -30,7 +31,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
-            android:background="@drawable/player_back" />
+            android:background="@drawable/player_back" 
+            android:onClick="OnClickTopLeft" />
 
         
         <ImageButton
@@ -129,7 +131,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/player_quality" />
+                android:background="@drawable/player_quality"
+                android:visibility="gone" />
         </RelativeLayout>
     </RelativeLayout>
 
