--- a/yueshipin/res/layout/setting.xml
+++ b/yueshipin/res/layout/setting.xml
@@ -157,7 +157,6 @@
                 android:id="@+id/ad"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
-
                 <com.joyplus.widget.InnerListView
                     android:id="@+id/list"
                     android:layout_width="fill_parent"
@@ -166,8 +165,10 @@
                     android:cacheColorHint="#00000000"
                     android:divider="#dedfde"
                     android:dividerHeight="1px"
-                    android:listSelector="#00000000" >
+                    android:listSelector="#00000000"
+                    android:focusable="false" >
                 </com.joyplus.widget.InnerListView>
+
                 <!--
                 ListView
                     android:id="@+id/list"
