zhengang 修改相关悦单效果图  暂时定为黄色

--- a/yueshipin/res/layout/detail_movie.xml
+++ b/yueshipin/res/layout/detail_movie.xml
@@ -337,8 +337,8 @@
                         android:id="@+id/button5"
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="3dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="3dp"
                         android:background="@drawable/detail_movie_button"
                         android:drawableBottom="@drawable/tab1_divider"
                         android:drawableRight="@drawable/detailed_movie_related_in_bg"
@@ -350,8 +350,8 @@
                         android:id="@+id/button6"
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="3dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="3dp"
                         android:background="@drawable/detail_movie_button"
                         android:drawableBottom="@drawable/tab1_divider"
                         android:drawableRight="@drawable/detailed_movie_related_in_bg"
@@ -363,8 +363,8 @@
                         android:id="@+id/button7"
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="3dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="3dp"
                         android:background="@drawable/detail_movie_button"
                         android:drawableBottom="@drawable/tab1_divider"
                         android:drawableRight="@drawable/detailed_movie_related_in_bg"
@@ -376,8 +376,8 @@
                         android:id="@+id/button8"
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="3dp"
+                        android:paddingLeft="8dp"
+                        android:paddingR="3dp"
                         android:background="@drawable/detail_movie_button"
                         android:drawableRight="@drawable/detailed_movie_related_in_bg"
                         android:gravity="center_vertical"
