--- a/yueshipin/res/values/colors.xml
+++ b/yueshipin/res/values/colors.xml
@@ -15,4 +15,5 @@
 
     <color name="orange">#FFF48B00</color>
     <color name="darkorange">#FF824600</color>
+    <color name="yellow">#FBBB37</color>
 </resources>
